syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.prime";
option java_outer_classname = "PrimeProto";

message PrimeRequest{
  int32 number = 1;
}

message PrimeResponse{
  int32 prime = 1;
}

service PrimeService{
  rpc GetPrimes(PrimeRequest) returns (stream PrimeResponse);
}